# meta-prompt-generator

./: .env  .gitignore  Current Credibility Statement.txt  README.md  RELEASE_v1.0.0.a.md  RELEASE_v1.0.0.md  backup-diiac.ps1  backup-ledger.jsonl  docker-compose.yml  openapi.json  repolayout.txt  tree.txt
.github/: Token.txt  (+1 more)
Backend/: .dockerignore  Dockerfile  conftest.py  docker-compose-old.yml  pyproject.toml  requirements.in  requirements.txt
Backend/app/: api.py  errors.py  exceptions.py  main.py  schemas.py  startup.py
Backend/app/adapters/: base.py  baseline_adapter.py  bootstrap_adapter.py  mock_adapter.py  openai_adapter.py  registry.py
Backend/app/api/: auth.py  rbac.py
Backend/app/execution/: router.py
Backend/app/llm_providers/: base.py  llm_service.py  mock_provider.py  registry.py
Backend/app/router/: execution_api.py  execution_router.py  proposition_api.py  read_api.py
Backend/app/schemas/: network-design.json
Backend/app/scripts/: validate_library.py
Backend/app/services/: assembler.py  content_normaliser.py  contract_hashing.py  ledger.py  overlay_loader.py  policy_config.py  report_generator.py  report_mapper.py  report_templates.py  risk_engine.py  roles.py  schema_resolver.py  validation_engine.py  versioning.py
Backend/routes/: human-input.ts
Backend/scripts/: validate_library.py
Backend/tests/: conftest.py  test_assembler.py  test_golden_prompts.py  test_prompt_golden.py  test_prompt_regression.py  update commands.txt
Backend/tests/golden/: CTO_STRATEGY.prompt.txt  EA_SOLUTION.prompt.txt  ea_solution.prompt.txt  (+1 more)
(+170 files in other folders)
